src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Determine the set of methods that are overridden by the given<br>
	 * method.<br>
	 * * In both Objective-C and C++, a method (aka virtual member function,<br>
	 * in C++) can override a virtual method in a base class. For<br>
	 * Objective-C, a method is said to override any method in the class's<br>
	 * base class, its protocols, or its categories' protocols, that has the same<br>
	 * selector and is of the same kind (class or instance).<br>
	 * If no such method exists, the search continues to the class's superclass,<br>
	 * its protocols, and its categories, and so on. A method from an Objective-C<br>
	 * implementation is considered to override the same methods as its<br>
	 * corresponding method in the interface.<br>
	 * * For C++, a virtual member function overrides any virtual member<br>
	 * function with the same signature that occurs in its base<br>
	 * classes. With multiple inheritance, a virtual member function can<br>
	 * override several virtual member functions coming from different<br>
	 * base classes.<br>
	 * * In all cases, this function determines the immediate overridden<br>
	 * method, rather than all of the overridden methods. For example, if<br>
	 * a method is originally declared in a class A, then overridden in B<br>
	 * (which in inherits from A) and also in C (which inherited from B),<br>
	 * then the only overridden method returned from this function when<br>
	 * invoked on C's method will be B's method. The client may then<br>
	 * invoke this function again, given the previously-found overridden<br>
	 * methods, to map out the complete method-override set.<br>
	 * * \param cursor A cursor representing an Objective-C or C++<br>
	 * method. This routine will compute the set of methods that this<br>
	 * method overrides.<br>
	 * <br>
	 * \param overridden A pointer whose pointee will be replaced with a<br>
	 * pointer to an array of cursors, representing the set of overridden<br>
	 * methods. If there are no overridden methods, the pointee will be<br>
	 * set to NULL. The pointee must be freed via a call to <br>
	 * \c clang_disposeOverriddenCursors().<br>
	 * * \param num_overridden A pointer to the number of overridden<br>
	 * functions, will be set to the number of overridden functions in the<br>
	 * array pointed to by \p overridden.<br>
	 * Original signature : <code>void clang_getOverriddenCursors(CXCursor, CXCursor**, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2446</i>
	 */
	void clang_getOverriddenCursors(CXCursor.ByValue cursor, PointerByReference overridden, IntBuffer num_overridden);
	/**
	 * \brief Free the set of overridden cursors returned by \c<br>
	 * clang_getOverriddenCursors().<br>
	 * Original signature : <code>void clang_disposeOverriddenCursors(CXCursor*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2454</i>
	 */
	void clang_disposeOverriddenCursors(CXCursor overridden);
	/**
	 * \brief Retrieve the file that is included by the given inclusion directive<br>
	 * cursor.<br>
	 * Original signature : <code>CXFile clang_getIncludedFile(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2460</i>
	 */
	Pointer clang_getIncludedFile(CXCursor.ByValue cursor);
	/**
	 * \brief Map a source location to the cursor that describes the entity at that<br>
	 * location in the source code.<br>
	 * * clang_getCursor() maps an arbitrary source location within a translation<br>
	 * unit down to the most specific cursor that describes the entity at that<br>
	 * location. For example, given an expression \c x + y, invoking<br>
	 * clang_getCursor() with a source location pointing to "x" will return the<br>
	 * cursor for "x"; similarly for "y". If the cursor points anywhere between<br>
	 * "x" or "y" (e.g., on the + or the whitespace around it), clang_getCursor()<br>
	 * will return a cursor referring to the "+" expression.<br>
	 * * \returns a cursor representing the entity at the given source location, or<br>
	 * a NULL cursor if no such entity can be found.<br>
	 * Original signature : <code>CXCursor clang_getCursor(CXTranslationUnit, CXSourceLocation)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2492</i>
	 */
	CXCursor.ByValue clang_getCursor(ClangLibrary.CXTranslationUnit CXTranslationUnit1, CXSourceLocation.ByValue CXSourceLocation1);
	/**
	 * \brief Retrieve the physical location of the source constructor referenced<br>
	 * by the given cursor.<br>
	 * * The location of a declaration is typically the location of the name of that<br>
	 * declaration, where the name of that declaration would occur if it is<br>
	 * unnamed, or some keyword that introduces that particular declaration.<br>
	 * The location of a reference is where that reference occurs within the<br>
	 * source code.<br>
	 * Original signature : <code>CXSourceLocation clang_getCursorLocation(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2504</i>
	 */
	CXSourceLocation.ByValue clang_getCursorLocation(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Retrieve the physical extent of the source construct referenced by<br>
	 * the given cursor.<br>
	 * * The extent of a cursor starts with the file/line/column pointing at the<br>
	 * first character within the source construct that the cursor refers to and<br>
	 * ends with the last character withinin that source construct. For a<br>
	 * declaration, the extent covers the declaration itself. For a reference,<br>
	 * the extent covers the location of the reference (e.g., where the referenced<br>
	 * entity was actually used).<br>
	 * Original signature : <code>CXSourceRange clang_getCursorExtent(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2517</i>
	 */
	CXSourceRange.ByValue clang_getCursorExtent(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Retrieve the type of a CXCursor (if any).<br>
	 * Original signature : <code>CXType clang_getCursorType(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2623</i>
	 */
	clang.CXType.ByValue clang_getCursorType(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the underlying type of a typedef declaration.<br>
	 * * If the cursor does not reference a typedef declaration, an invalid type is<br>
	 * returned.<br>
	 * Original signature : <code>CXType clang_getTypedefDeclUnderlyingType(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2631</i>
	 */
	clang.CXType.ByValue clang_getTypedefDeclUnderlyingType(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the integer type of an enum declaration.<br>
	 * * If the cursor does not reference an enum declaration, an invalid type is<br>
	 * returned.<br>
	 * Original signature : <code>CXType clang_getEnumDeclIntegerType(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2639</i>
	 */
	clang.CXType.ByValue clang_getEnumDeclIntegerType(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the integer value of an enum constant declaration as a signed<br>
	 *  long long.<br>
	 * * If the cursor does not reference an enum constant declaration, LLONG_MIN is returned.<br>
	 * Since this is also potentially a valid constant value, the kind of the cursor<br>
	 * must be verified before calling this function.<br>
	 * Original signature : <code>long long clang_getEnumConstantDeclValue(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2649</i>
	 */
	long clang_getEnumConstantDeclValue(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the integer value of an enum constant declaration as an unsigned<br>
	 *  long long.<br>
	 * * If the cursor does not reference an enum constant declaration, ULLONG_MAX is returned.<br>
	 * Since this is also potentially a valid constant value, the kind of the cursor<br>
	 * must be verified before calling this function.<br>
	 * Original signature : <code>long long clang_getEnumConstantDeclUnsignedValue(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2659</i>
	 */
	long clang_getEnumConstantDeclUnsignedValue(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the bit width of a bit field declaration as an integer.<br>
	 * * If a cursor that is not a bit field declaration is passed in, -1 is returned.<br>
	 * Original signature : <code>int clang_getFieldDeclBitWidth(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2666</i>
	 */
	int clang_getFieldDeclBitWidth(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the number of non-variadic arguments associated with a given<br>
	 * cursor.<br>
	 * * If a cursor that is not a function or method is passed in, -1 is returned.<br>
	 * Original signature : <code>int clang_Cursor_getNumArguments(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2674</i>
	 */
	int clang_Cursor_getNumArguments(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the argument cursor of a function or method.<br>
	 * * If a cursor that is not a function or method is passed in or the index<br>
	 * exceeds the number of arguments, an invalid cursor is returned.<br>
	 * Original signature : <code>CXCursor clang_Cursor_getArgument(CXCursor, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2682</i>
	 */
	CXCursor.ByValue clang_Cursor_getArgument(CXCursor.ByValue C, int i);
	/**
	 * \brief Determine whether two CXTypes represent the same type.<br>
	 * * \returns non-zero if the CXTypes represent the same type and<br>
	 *          zero otherwise.<br>
	 * Original signature : <code>int clang_equalTypes(CXType, CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2690</i>
	 */
	int clang_equalTypes(clang.CXType.ByValue A, clang.CXType.ByValue B);
	/**
	 * \brief Return the canonical type for a CXType.<br>
	 * * Clang's type system explicitly models typedefs and all the ways<br>
	 * a specific type can be represented.  The canonical type is the underlying<br>
	 * type with all the "sugar" removed.  For example, if 'T' is a typedef<br>
	 * for 'int', the canonical type for 'T' would be 'int'.<br>
	 * Original signature : <code>CXType clang_getCanonicalType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2700</i>
	 */
	clang.CXType.ByValue clang_getCanonicalType(clang.CXType.ByValue T);
	/**
	 * \brief Determine whether a CXType has the "const" qualifier set,<br>
	 * without looking through typedefs that may have added "const" at a<br>
	 * different level.<br>
	 * Original signature : <code>int clang_isConstQualifiedType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2707</i>
	 */
	int clang_isConstQualifiedType(clang.CXType.ByValue T);
	/**
	 * \brief Determine whether a CXType has the "volatile" qualifier set,<br>
	 * without looking through typedefs that may have added "volatile" at<br>
	 * a different level.<br>
	 * Original signature : <code>int clang_isVolatileQualifiedType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2714</i>
	 */
	int clang_isVolatileQualifiedType(clang.CXType.ByValue T);
	/**
	 * \brief Determine whether a CXType has the "restrict" qualifier set,<br>
	 * without looking through typedefs that may have added "restrict" at a<br>
	 * different level.<br>
	 * Original signature : <code>int clang_isRestrictQualifiedType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2721</i>
	 */
	int clang_isRestrictQualifiedType(clang.CXType.ByValue T);
	/**
	 * \brief For pointer types, returns the type of the pointee.<br>
	 * Original signature : <code>CXType clang_getPointeeType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2726</i>
	 */
	clang.CXType.ByValue clang_getPointeeType(clang.CXType.ByValue T);
